# nfld

./: .gitignore  .markdownlint.yaml  README.md  TODO.md  build.sh  compose.yaml  shell.sh
.gitea/workflows/: build.yaml
backend/: .dockerignore  Dockerfile  README.md  api.py  api.rest  build.sh  docker.sh  healthcheck.py  lint.sh  pyproject.toml  requirements.txt  test.sh  wsgi.py
backend/features/: schedule.feature  teams.feature  version.feature
backend/features/steps/: schedule.py  teams.py  version.py
frontend/: .dockerignore  .env  .env.development  .env.production  .lintstagedrc  .prettierignore  .prettierrc  Dockerfile  README.md  biome.json  build.sh  docker.sh  eslint.config.js  eslint.config.ts  index.css  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/.husky/: pre-commit
frontend/src/: Bye.tsx  Dashboard.tsx  Display.css  Display.tsx  Selector.css  Selector.tsx  Week.tsx  main.tsx  setup.ts  vite-env.d.ts
frontend/src/components/bye/: index.tsx
frontend/src/components/dashboard/: index.tsx
frontend/src/components/display/: index.css  index.test.tsx  index.tsx
frontend/src/components/selector/: index.css  index.test.tsx  index.tsx
frontend/src/components/week/: index.css  index.tsx
frontend/src/helpers/: interfaces.ts  schedules.ts
nginx/: .dockerignore  Dockerfile  README.md  build.sh  default.conf
