[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nfld-backend"
version = "1.0.0"
description = "NFL team schedule picker (Backend)"
license = "GPL-3.0-only"
license-files = ["LICENSE.md"]
authors = [
    {name = "Chris Post"}
]
keywords = ["NFL", "schedule"]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "flask",
    "gunicorn",
    "requests",
    "requests_cache"
]
requires-python = ">= 3.11"
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/chump29/nfld"

[project.optional-dependencies]
dev = [
    "behave",
    "pip-review",
    "pip3-autoremove",
    "pylint"
]
